Made it more inclusive

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,5 @@
 title: Open Design 2018
-description: A place for me to document my open design thoughts and processes.
+description: A place for us to document our open design thoughts and processes.
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-minimal
