--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -7,6 +7,7 @@ include: ["_pages"]
 permalink: /:title/
 
 sections: [
+    ['research', 'Research'],
     ['week1', 'Week 1'],
     ['week2', 'Week 2'],
     ['week3', 'Week 3'],
