Added catagory "presentations"

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -9,6 +9,7 @@ permalink: /:title/
 sections: [
     ['research', 'Research'],
     ['ideation', 'Ideation'],
+    ['presentations', 'Presentations'],
 ]
 
 
