apped, renamed and updated docs

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -10,6 +10,9 @@ sections: [
     ['research', 'Research'],
     ['ideation', 'Ideation'],
     ['presentations', 'Presentations'],
+    ['development', 'Development'],
+    ['assembly', 'Assembly']
+
 ]
 
 
